CORE-20772: Improve logging for OSGi
Especially when the error event is emitted.